--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,25 @@ button{
   text-align: center;
   /* display: inline-block; */
 }
+#header {
+  display: flex;
+  justify-content: center;
+  background: #1D2319;
+  opacity: 0.8;
+  height: 7rem;
+  /* background-image: url("https://images.unsplash.com/photo-1446071103084-c257b5f70672?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fHBsYW50fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"); */
+  object-fit: cover;
+  /* background-repeat: no-repeat; */
+  /* background-size:cover; */
+  /* padding: 1rem; */
+}
+#img{
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size:cover;
+  /* object-fit: fill; */
+}
 
 
 
