--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -6,4 +6,26 @@
     grid-template-columns: auto auto auto auto auto;
     gap: 20px;
     padding: 20px;
+    
+  }
+  #size{
+    align-items: stretch;
+  }
+  .card {
+    /* align-items: stretch; */
+    /* text-align: center; */
+    /* border: grey solid 1px; */
+    /* padding: 1rem; */
+    /* width: 15rem; */
+    /* height: 25rem; */
+    /* display: inline-grid; */
+    /* margin: 1rem 2rem; */
+    /* box-shadow: 3px 4px #e04b52; */
+  }
+  
+  .toy-avatar {
+    align-items: stretch;
+    /* justify-self: center; */
+    /* height: 12rem; */
+    /* width: auto; */
   }
