--- a/src/index.css
+++ b/src/index.css
@@ -14,33 +14,29 @@ body{
   margin-top: 25px;
 }
 button{
-  /* background-color:#3C433B; */
   background-color: #697B6D;
   border-radius: 12px;
   font-size: 16px;
   padding: 10px 30px;
   text-align: center;
-  /* display: inline-block; */
 }
 #header {
   display: flex;
   justify-content: center;
   background: #1D2319;
-  height: 7rem;
-  background-image: url("https://images.unsplash.com/photo-1446071103084-c257b5f70672?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fHBsYW50fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60");
+  height: 3rem;
+  /* background-image: url("https://images.unsplash.com/photo-1446071103084-c257b5f70672?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fHBsYW50fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"); */
   object-fit: cover;
   background-repeat: repeat;
-  /* background-size:cover; */
   margin-top: 20px;
   margin-bottom: 20px;
-  padding: 2rem;
+  padding: 1.5rem;
 }
 #img{
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
   background-size:cover;
-  /* object-fit: fill; */
 }
 .footer{
   display: flex;
@@ -48,6 +44,10 @@ button{
   align-self: center;
   justify-content: space-around;
   font-weight: 400;
+}
+#display{
+  display: flex;
+  justify-content: space-between;
 }
 
 
