--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,15 +1,24 @@
 #grid-container {
-    margin: auto;
     display: grid;
     height: auto;
     align-content: center;
-    grid-template-columns: auto auto auto auto auto;
-    gap: 20px;
-    padding: 20px;
-    
+    grid-template-columns: auto auto auto auto;
+    gap: 10px;
+    padding: 10px;
+    width: 75%;
   }
   #card{
     align-items: stretch;
   }
-  
-  
+ #container{
+  gap: 30px;
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+ }
+#columns{
+  font-weight: bolder;
+  font-size: larger;
+  background-color: #B7BAAE;
+  padding: 20px;
+}
