--- a/src/components/pages/login.css
+++ b/src/components/pages/login.css
@@ -6,6 +6,7 @@ input[type=text] {
     border: none;
     background-color: #363F3D;
     color:white;
+    font-weight: bolder;
     font-family: 'Poppins', sans-serif;
 }
 #input{
@@ -29,6 +30,3 @@ input[type=password] {
 #card{
     border-radius: 5px;
 }
-/* form{
-    align-items: center;
-} */
