--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
 }
 body{
   margin: auto;
-  width: 70%;
+  width: 80%;
   font-family: 'Poppins', sans-serif;
   background-color: #d5cbbf;
   margin-top: 25px;
@@ -31,6 +31,7 @@ button{
   margin-top: 20px;
   margin-bottom: 20px;
   padding: 1.5rem;
+  opacity: 0.9;
 }
 #img{
   width: 100%;
@@ -39,11 +40,14 @@ button{
   background-size:cover;
 }
 .footer{
+  height: 3rem;
   display: flex;
   padding: 20px;
   align-self: center;
   justify-content: space-around;
   font-weight: 400;
+  background-color: #B7BAAE;
+  margin-bottom: 20px;
 }
 #display{
   display: flex;
