--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,6 +1,6 @@
 #grid-container {
     display: grid;
-    height: auto;
+    /* height: auto; */
     align-content: center;
     grid-template-columns: auto auto auto auto;
     gap: 10px;
